--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,50 @@ body{
     color:floralwhite;
     background-color: darkslateblue;
 }
+.title{
+    display: flex;
+    justify-content: center;
+    margin:20px;
+    font-size: 100px;
+    flex:1 1 auto;
+}
+.rulesButton{
+    display: flex;
+    justify-content: center;
+    padding:10px;
+    
+    
+}
+#rulesbutton{
+    height:40px;
+    width:80px;
+    font-size: 20px;
+    font-family: 'MedievalSharp', cursive;;
+
+}
 .introBox{
     display: flex;
-    flex-direction: row;
-    flex:1,1,auto;
-    margin-top:300px;
-    align-content: center;
+    
+    align-items: center;
     justify-content: space-between;
-    font-size: 120px;
-    max-height: 50px;
-    background-color: gold;
+    font-size: 120px;   
+    padding:10px;
+    
+    
+    
 }
-.introBox .p{
+.elfBox {
+    overflow: hidden;
+
+    
     
 }
 .wizardBox{
     
+}
+.rules{
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    margin:10px;
 }
