--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,12 @@ body{
     font-size: 100px;
     flex:1 1 auto;
 }
-.rulesButton{
+.buttons{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-content: center;
     padding:10px;
+    
     
     
 }
