--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     padding:0px;
     
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: 'MedievalSharp', cursive;
     color:floralwhite;
@@ -19,9 +22,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-content: center;
-    padding:10px;
-    
-    
+    padding:10px;   
     
 }
 #rulesbutton{
@@ -31,29 +32,58 @@ body{
     font-family: 'MedievalSharp', cursive;;
 
 }
-.introBox{
+.pictureBox{
     display: flex;
-    
-    align-items: center;
-    justify-content: space-between;
-    font-size: 120px;   
-    padding:10px;
+    justify-content: center;
+    flex-wrap: nowrap;
     
     
-    
-}
-.elfBox {
-    overflow: hidden;
 
-    
-    
 }
-.wizardBox{
+
+.elfBox img{
+    height:350px;  
+
+}
+
+.wizardBox img{
+    height:375px;
+}
+
+.giantBox img{
+    height: 500px;
+}
+
+.directionLinks{
+    display: flex;
+    justify-content: center;
+    font-family: 'MedievalSharp', cursive;
+    font-size: xx-large;
+    margin-bottom: 100px;
+
+}
+.directionLinks a{
+    padding:100px;
+    color: white;
+}
+
+.buttons button{
     
 }
 .rules{
     display: flex;
     justify-content: center;
     font-size: 40px;
-    margin:10px;
+    margin:20px;
+}
+#characters{
+    margin:100px;
+}
+
+
+#letsPlay{
+    margin:100px;
+
+
+
 }
