--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body{
     margin-top: 40px;
     display:flex;
     align-content: center;
+    justify-content: center;
+    margin-bottom: 90px;
     
 
 }
@@ -56,7 +58,7 @@ body{
     justify-content: center;
     flex-wrap: nowrap;
     
-    
+} 
 
 
 .directionLinks{
@@ -86,12 +88,23 @@ body{
 #rules .ul{
     margin-top: 40px;
     justify-content: flex-start;
-    
-    
-
-
-
 }
+.characterScroll{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    height: 400px;
+}
+.characterScroll img{
+    height:400px;
+}
+.characterScroll button{
+    height:50px;
+    width:60px;
+    font-size: 40px;
+}
+
+
 
 
 #characters{
