--- a/styles.css
+++ b/styles.css
@@ -11,20 +11,83 @@ body{
     color:floralwhite;
     background-color: darkslateblue;
 }
-.title{
+.castle__title{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin:20px;
+    align-items: center;
+    margin-bottom:20px;
     font-size: 100px;
     flex:1 1 auto;
 }
+.castle__title img{
+    height:500px;
+    width:300px;
+}
+
+.select__options{
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    padding:10px; 
+    margin-bottom: 80px;
+    
+}
+
+.select__options a{
+    color:white;
+    font-size: 40px;
+}
+.meet_Players{
+    display:flex;
+    justify-content: center;
+
+
+}
+
+.carousel{
+    display: flex;
+    justify-content: center;
+    position:relative;
+    height:400px;
+    width:80%;
+    margin: auto;
+    
+    
+}
+.carousel__image{
+    height:500px;
+    width:300px;
+    
+
+}
+.carousel__track-container{
+    background:lightgreen;
+    padding:10px;
+    height:100%;
+    position:relative;
+    width:100%;
+}
+
+.carousel__track{
+    padding:0;
+    margin:0;
+    list-style: none;
+    
+}
+.carousel__slide{
+    position: absolute;
+}
+
+
+
 .scrollContainer{
     margin-top: 40px;
     display:flex;
     align-content: center;
-    justify-content: center;
-    margin-bottom: 90px;
-    
+    justify-content: space-between;
+    margin-bottom: 90px;   
+      
 
 }
 
@@ -73,11 +136,13 @@ body{
     padding:100px;
     color: white;
 }
-#rules{
+.rules__Container{
     display: flex;
-    
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 80px;
     font-size: 40px;
-    margin:20px;
+    margin-bottom: 50px;
 }
 
 .rulesTitle{
@@ -85,9 +150,9 @@ body{
     margin-bottom: 40px;
 }
 
-#rules .ul{
-    margin-top: 40px;
-    justify-content: flex-start;
+
+.rules__image img{
+    
 }
 .characterScroll{
     display: flex;
@@ -103,7 +168,9 @@ body{
     width:60px;
     font-size: 40px;
 }
-
+.meet-Players{
+    font-size: 89px;
+}
 
 
 
