--- a/styles.css
+++ b/styles.css
@@ -30,92 +30,153 @@ body{
     justify-content: space-evenly;
     align-content: center;
     padding:10px; 
-    margin-bottom: 80px;
+    margin-bottom: 160px;
     
 }
 
 .select__options a{
     color:white;
     font-size: 40px;
+    
 }
-.meet_Players{
-    display:flex;
+
+.rules__Container{
+    display: flex;
+    flex-direction: row;
     justify-content: center;
-
-
+    margin-left: 80px;
+    font-size: 40px;
+    margin-bottom: 20px;
 }
 
-.carousel{
+.rulesTitle{
+    font-size: 75px;
+    margin-bottom: 40px;
     display: flex;
     justify-content: center;
+    
+}
+
+.next__Players a{
+    color:white;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 200px;
+    font-size: 40px;
+}
+
+.meet_Players{
+    display: flex;
+    align-items: center;
+    font-size: 200px;
+    
+    
+}
+
+
+
+
+
+.carousel{
+    margin:auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80%;
+    width:100%;
     position:relative;
-    height:400px;
-    width:80%;
-    margin: auto;
+    
+    
     
     
 }
 .carousel__image{
+    
     height:500px;
-    width:300px;
+    width:400px;
+    
     
 
 }
 .carousel__track-container{
-    background:lightgreen;
-    padding:10px;
+    font-size: 80px;
     height:100%;
     position:relative;
     width:100%;
+    
+    
 }
 
 .carousel__track{
     padding:0;
-    margin:0;
+
     list-style: none;
-    
-}
-.carousel__slide{
-    position: absolute;
-}
-
-
-
-.scrollContainer{
-    margin-top: 40px;
-    display:flex;
-    align-content: center;
-    justify-content: space-between;
-    margin-bottom: 90px;   
-      
-
-}
-
-.scrollContainer img{
-    height:475px;
-}
-.scrollContainer p{
-    display: flex;  
-    justify-content: center;
-}
-
-
-
-
-.buttons{
     display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    padding:10px;   
+    justify-content: center;
+    margin-bottom:60px;
     
 }
-#rulesbutton{
-    height:40px;
-    width:80px;
-    font-size: 20px;
-    font-family: 'MedievalSharp', cursive;;
+/*sets postion of images and hides by default*/
+.carousel__slide{
+    display: none;
+    position: absolute;
+    
 
 }
+
+.carousel__button{
+    position:relative;
+    height:60px;
+    cursor: pointer;
+}
+.carousel__button img{
+    width:20px;
+}
+
+.carousel__nav{
+
+    margin-top:250px;
+    padding:10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.carousel__indicator{
+    border:0;
+    width:15px;
+    height:15px;
+    padding:10px;
+    margin:0 12px;
+    background:rgba(0,0,0,.3);
+
+}
+
+.carousel__indicator.current-slide{
+    background:rgba(0,0,0,.75);
+
+}
+
+
+
+
+
+
+.lets__Play{
+    margin-top: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*
 .pictureBox{
     display: flex;
     justify-content: center;
@@ -136,19 +197,7 @@ body{
     padding:100px;
     color: white;
 }
-.rules__Container{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-left: 80px;
-    font-size: 40px;
-    margin-bottom: 50px;
-}
 
-.rulesTitle{
-    font-size: 75px;
-    margin-bottom: 40px;
-}
 
 
 .rules__image img{
@@ -185,3 +234,4 @@ body{
 
 
 }
+*/
