--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,13 @@ body{
 
 
 .carousel__slide{
-    display: none;
+    /*display: none;*/
     position: absolute;
-    margin-top:100px;
+    
     margin-bottom: 100px;
+}
+.carousel__slide img{
+    height: 300px;
 }
 
 
@@ -107,18 +110,41 @@ body{
 
 .carousel__buttons{
     display: flex;
-    align-items: flex-start;
+    justify-content:space-around;
 
     
 }
 .nav__button{
-    height:300px;
-    width: 50px;
-   
+    height:100px;
+    width: 20px;
+    margin-left: 500px;
+    margin-right: 500px;
+    margin-top: 50px;
+    
+  
 }
 
-.
+.carousel__nav{
+    
+    display: flex;
+    justify-content: center;
+    margin-bottom: 90px;
+    margin-top: 500px;
 
+}
+.carousel__indicator{
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    padding: 10px;
+}
+.lets__Play{
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center; 
+    font-size: 75px;  
+    
+}
 
 /*
 .carousel__button{
@@ -131,16 +157,7 @@ body{
     width:20px;
 }
 
-.carousel__nav{
 
-    
-    padding:10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 200px;
-
-}
 .carousel__indicator{
     border:0;
     width:15px;
