--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
     flex:1 1 auto;
 }
 .castle__title img{
-    height:500px;
+    height:400px;
     width:300px;
 }
 
@@ -60,6 +60,7 @@ body{
     display: flex;
     justify-content: center;
     margin-bottom: 200px;
+    margin-top: 100px;
 
 }
 .next__Select a{
@@ -68,7 +69,7 @@ body{
 }
 
 .meet__Players{
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: center; 
     font-size: 75px;  
@@ -90,7 +91,7 @@ body{
     /*display: none;*/
     position: absolute;
     
-    margin-bottom: 100px;
+    
 }
 .carousel__slide img{
     height: 300px;
@@ -121,6 +122,7 @@ body{
     margin-right: 500px;
     margin-top: 50px;
     
+    
   
 }
 
@@ -128,7 +130,7 @@ body{
     
     display: flex;
     justify-content: center;
-    margin-bottom: 90px;
+    margin-bottom: 50px;
     margin-top: 500px;
 
 }
@@ -139,12 +141,30 @@ body{
     padding: 10px;
 }
 .lets__Play{
+
     margin-bottom: 40px;
     display: flex;
     justify-content: center; 
     font-size: 75px;  
     
 }
+.game__Play{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+.game__Play{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#user__Name{
+    font-size: 50px;
+    height: 50px;
+}
+
 
 /*
 .carousel__button{
