--- a/styles.css
+++ b/styles.css
@@ -153,9 +153,11 @@ body{
     align-items: center;
     justify-content: center;
     font-size: 30px;
+    
 }
-.game__Play{
+.name__Enter{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -163,6 +165,14 @@ body{
 #user__Name{
     font-size: 50px;
     height: 50px;
+}
+.input__Name{
+    height: 50px;
+    width:50px;
+    margin-bottom: 40px;
+    font-size: 20px;
+    font-family: 'MedievalSharp', cursive;
+    
 }
 
 
