--- a/styles.css
+++ b/styles.css
@@ -261,114 +261,11 @@ body{
     height: 350px;
 }
 
-
-
-/*
-.carousel__button{
-    position:relative;
-    height:60px;
-    cursor: pointer;
-    margin-top:100px;
-}
-.carousel__button img{
-    width:20px;
-}
-
-
-.carousel__indicator{
-    border:0;
-    width:15px;
-    height:15px;
-    padding:10px;
-    margin:0 12px;
-    background:rgba(0,0,0,.3);
-
-}
-
-.carousel__indicator.current-slide{
-    background:rgba(0,0,0,.75);
-
-}
-
-
-
-
-
-
-.lets__Play{
-    margin-top: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 100px;
-}
-
-
-
-
-*/
-
-
-
-
-
-
-/*
-.pictureBox{
+.results_sentence{
     display: flex;
     justify-content: center;
-    flex-wrap: nowrap;
-    
-} 
-
-
-.directionLinks{
-    display: flex;
-    justify-content: center;
-    font-family: 'MedievalSharp', cursive;
-    font-size: xx-large;
-    margin-bottom: 100px;
-
+    margin: 20px;
 }
-.directionLinks a{
-    padding:100px;
-    color: white;
+.results_sentence p{
+    font-size: 50px;
 }
-
-
-
-.rules__image img{
-    
-}
-.characterScroll{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    height: 400px;
-}
-.characterScroll img{
-    height:400px;
-}
-.characterScroll button{
-    height:50px;
-    width:60px;
-    font-size: 40px;
-}
-.meet-Players{
-    font-size: 89px;
-}
-
-
-
-#characters{
-    margin:100px;
-}
-
-
-#letsPlay{
-    margin:100px;
-
-
-
-}
-*/
