--- a/styles.css
+++ b/styles.css
@@ -269,3 +269,13 @@ body{
 .results_sentence p{
     font-size: 50px;
 }
+
+
+/*pg 2 styles*/
+.p2_user__Name{
+    display: flex;
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
+    font-size: 100px;
+}
