--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,19 @@ body{
     font-size: 50px;
 }
 
+.game__Results{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 150px;
+}
+#result__Display{
+    display: flex;
+    align-items: center;
+}
 
+
+/*
 .results{
     display: flex;
     justify-content: center;
@@ -258,3 +270,4 @@ body{
 .results_sentence p{
     font-size: 50px;
 }
+*/
