--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,8 @@ body{
     justify-content: center;
     font-size: 50px;
 }
+
+
 .game__Main{
     display: flex;
     margin-top: 50px;
@@ -238,6 +240,28 @@ body{
     padding:20px;
     font-size: 50px;
 }
+.results{
+    display: flex;
+    justify-content: center;
+
+}
+.results img{
+    height: 350px;
+}
+
+.rs__sentence{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+.rs__sentence p{
+    font-size: 50px;
+}
+
+
+
+/*
+
 
 .game__Results{
     display: flex;
@@ -251,22 +275,4 @@ body{
 }
 
 
-/*
-.results{
-    display: flex;
-    justify-content: center;
-
-}
-.results img{
-    height: 350px;
-}
-
-.results_sentence{
-    display: flex;
-    justify-content: center;
-    margin: 20px;
-}
-.results_sentence p{
-    font-size: 50px;
-}
 */
