--- a/styles.css
+++ b/styles.css
@@ -195,9 +195,13 @@ body{
     justify-content: center;
     font-size: 50px;
 }
+#main__play{
+    display: flex;
+    flex-direction: column;
+}
 
 
-.game__Main{
+#main__select{
     display: flex;
     margin-top: 50px;
     align-items: center;
@@ -205,6 +209,7 @@ body{
     margin-bottom: 50px;
     
 }
+
 .char__Display{
     display: flex;
 
@@ -241,12 +246,14 @@ body{
     font-size: 50px;
 }
 .results{
-    display: flex;
+    display: none;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
 }
 .results img{
-    height: 350px;
+    height: 400px;
 }
 
 .rs__sentence{
