--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
     color:floralwhite;
     background-color: black;
 }
+/*title css*/
 .castle__title{
     display: flex;
     flex-direction: column;
@@ -18,13 +19,13 @@ body{
     align-items: center;
     margin-bottom:20px;
     font-size: 100px;
-    flex:1 1 auto;
+    
 }
 .castle__title img{
     height:400px;
     width:300px;
 }
-
+/*game selector navigation*/
 .select__options{
     display: flex;
     justify-content: space-evenly;
@@ -39,12 +40,12 @@ body{
     font-size: 40px;
     
 }
-
+/*game rules container*/
 .rules__Container{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-left: 80px;
+    margin-left: 0px;
     font-size: 40px;
     margin-bottom: 10px;
 }
@@ -56,6 +57,8 @@ body{
     justify-content: center;
     
 }
+
+/*navigate to next section*/
 .next__Select{
     display: flex;
     justify-content: center;
@@ -68,6 +71,7 @@ body{
     font-size: 40px;
 }
 
+/*players carousel*/
 .meet__Players{
     margin-bottom: 20px;
     display: flex;
@@ -77,11 +81,12 @@ body{
 }
 
 .carousel{
-    margin: auto;
+    
     display: flex;
-    justify-content:center;
+    justify-content:flex-start;
+    
     height: 80%;
-    width:100%;
+    width: 100px;
     position:absolute;
     font-size: 100px;   
 }
@@ -195,12 +200,12 @@ body{
     justify-content: center;
     font-size: 50px;
 }
+
+/*main gameplay*/
 #main__play{
     display: flex;
     flex-direction: column;
 }
-
-
 #main__select{
     display: flex;
     margin-top: 50px;
@@ -210,52 +215,43 @@ body{
     
 }
 
-.char__Display{
-    display: flex;
-
-}
 .vs{
     margin-right: 10px;
 }
 
-
-
-/*character displays*/
-.user__compChar{
-    display:flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    
-    
-}
-.user__Select{
-    display: flex;
-    justify-content: flex-start;
-    
-}
 #user__char{
     height: 350px; 
 }
 
-
-.score_keep{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding:20px;
-    font-size: 50px;
-}
+/*results display*/
 .results{
     display: none;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
 
 }
+
+.results__Char{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+}
+#vs{
+    font-size: 50px;
+    padding:20px;
+}
+
+
+
 .results img{
     height: 400px;
 }
 
+/*display results sentence*/
 .rs__sentence{
     display: flex;
     justify-content: center;
@@ -264,6 +260,21 @@ body{
 .rs__sentence p{
     font-size: 50px;
 }
+
+
+/*score of game*/
+.score_keep{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding:20px;
+    font-size: 50px;
+}
+ 
+
+
+
+
 
 
 
