--- a/styles.css
+++ b/styles.css
@@ -79,15 +79,24 @@ body{
     font-size: 75px;  
     
 }
-
-.carousel{
-    
+/*carousel css
+margin: auto;
     display: flex;
-    justify-content:flex-start;
-    
+    justify-content:center;
     height: 80%;
-    width: 100px;
+    width:100%;
     position:absolute;
+    font-size: 100px;   
+}
+*/
+/*page overflows due to carousel setting, adjust settings*/
+.carousel{
+    margin-left: 700px;
+    display: flex;
+    justify-content:center;
+    height: 80%;
+    width: 0px;
+    position: fixed
     font-size: 100px;   
 }
 
