--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,9 @@ margin: auto;
     justify-content:center;
     height: 80%;
     width: 0px;
-    position: fixed
-    font-size: 100px;   
+    position: absolute;
+    font-size: 100px;  
+    
 }
 
 
@@ -108,19 +109,11 @@ margin: auto;
     
 }
 .carousel__slide img{
-    height: 300px;
-}
-
-
-
-
-.carousel__image{
-    display: flex;
-    align-items: center;
-    height:500px;
-    width:400px;   
+    width:300px;  
+    height: 250px;
 
 }
+
 
 
 .carousel__buttons{
@@ -135,17 +128,14 @@ margin: auto;
     margin-left: 500px;
     margin-right: 500px;
     margin-top: 50px;
-    
-    
   
 }
 
-.carousel__nav{
-    
+.carousel__nav{  
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-    margin-top: 500px;
+    margin-top: 550px;
 
 }
 .carousel__indicator{
@@ -154,6 +144,12 @@ margin: auto;
     width: 15px;
     padding: 10px;
 }
+
+
+
+
+
+
 .lets__Play{
 
     margin-bottom: 40px;
