--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,8 @@ body{
 .next__Select{
     display: flex;
     justify-content: center;
-    margin-bottom: 200px;
-    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-top: 50px;
 
 }
 .next__Select a{
@@ -73,14 +73,15 @@ body{
 
 /*players carousel*/
 .meet__Players{
-    margin-bottom: 20px;
+    margin-bottom: -100px;
     display: flex;
     justify-content: center; 
     font-size: 75px;  
     
 }
-/*carousel css
-margin: auto;
+/*
+carousel css{
+    margin: auto;
     display: flex;
     justify-content:center;
     height: 80%;
@@ -91,11 +92,12 @@ margin: auto;
 */
 /*page overflows due to carousel setting, adjust settings*/
 .carousel{
-    margin-left: 700px;
+    
     display: flex;
     justify-content:center;
+    align-items: center;
     height: 80%;
-    width: 0px;
+    width: 100%;
     position: absolute;
     font-size: 100px;  
     
@@ -125,17 +127,17 @@ margin: auto;
 .nav__button{
     height:100px;
     width: 20px;
-    margin-left: 500px;
-    margin-right: 500px;
-    margin-top: 50px;
+    margin-left: 350px;
+    margin-right: 350px;
+    margin-top: 20px;
   
 }
 
 .carousel__nav{  
     display: flex;
     justify-content: center;
-    margin-bottom: 50px;
-    margin-top: 550px;
+    margin-bottom: 10px;
+    margin-top: 575px;
 
 }
 .carousel__indicator{
