--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body{
 .next__Select{
     display: flex;
     justify-content: center;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
     margin-top: 50px;
 
 }
@@ -77,6 +77,7 @@ body{
     display: flex;
     justify-content: center; 
     font-size: 75px;  
+    
     
 }
 /*
@@ -115,6 +116,9 @@ carousel css{
     height: 250px;
 
 }
+.carousel__slide p{
+    text-align: center;
+}
 
 
 
@@ -137,7 +141,7 @@ carousel css{
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
-    margin-top: 575px;
+    margin-top: 600px;
 
 }
 .carousel__indicator{
@@ -236,6 +240,7 @@ carousel css{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 200px;
     
 
 }
@@ -245,6 +250,7 @@ carousel css{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 50px;
 
 }
 #vs{
