--- a/styles.css
+++ b/styles.css
@@ -309,6 +309,8 @@ carousel css{
     align-items: center;
     justify-content: space-around;
     font-size: 50px;
+    margin: 100px;
+
 
 }
 #exitplay__btn{
@@ -317,6 +319,11 @@ carousel css{
     border: none;
     color:white;
     background-color: black;
+    text-decoration: none;
 
 
+}
+#exitplay__btn a{
+    text-decoration: none;
+    color:white;
 }
